--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,33 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="Restaurant POS App"
-      content="Restaurant POS App. A simple POS system for restaurant. Built with React, Node.js, Express, and MongoDb."
+      name="description"
+      content="DineMaster POS. An intuitive and powerful POS system for restaurants, built with React, Node.js, Express, and MongoDB."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+    <link rel="icon" href="%PUBLIC_URL%/appLogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/appLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <title>Restaurant POS App</title>
+    <title>DineMaster POS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
